--- a/external/js/kyber/package.json
+++ b/external/js/kyber/package.json
@@ -26,6 +26,7 @@
   "license": "AGPL-3.0",
   "homepage": "https://github.com/dedis/cothority",
   "dependencies": {
+    "@types/node": "^9.6.6",
     "bn.js": "^4.11.8",
     "elliptic": "^6.4.0",
     "hash.js": "^1.1.3"
@@ -44,6 +45,8 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^11.4.1",
     "prettier": "^1.10.2",
+    "ts-loader": "^4.2.0",
+    "typescript": "^2.8.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0"
