--- a/external/js/kyber/package.json
+++ b/external/js/kyber/package.json
@@ -35,7 +35,6 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "eslint": "^4.16.0",
@@ -50,7 +49,8 @@
     "typescript": "^2.8.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^3.10.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   },
   "files": [
     "dist/",
